# Kalshi_Cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kalshi_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  formatting.py  models.py  signing.py
tests/: test_cli.py  test_client.py  test_config.py  test_formatting.py  test_live_contract.py
