[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-cli"
version = "0.1.0"
description = "A Kalshi CLI inspired by polymarket-cli"
requires-python = ">=3.11"

[project.scripts]
kalshi = "kalshi_cli.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
